@@ -1,5 +1,10 @@
 2002-04-20  Danny Smith  <dannysmith@users.sourceforge.net>
 
+	* include/tchar.h (__TEXT): Make same as define in
+	w32api/include/winnt.h.
+
+2002-04-20  Danny Smith  <dannysmith@users.sourceforge.net>
+
 	* include/tchar.h (_tputenv): Add UNICODE mappings.
 	(_tsearchenv): Likewise.
 	(_tmakepath): Likewise.
